--- a/01-Introducao/notebooks/01-Introducao.ipynb
+++ b/01-Introducao/notebooks/01-Introducao.ipynb
@@ -40,236 +40,6 @@
     }
    },
    "source": [
-    "## O que é Inteligência Artificial\n",
-    "\n",
-    "Capacidade de solucionar problemas difíceis - O que é difícil?\n",
-    "\n",
-    "<img src=\"images/IA.png\" align=\"left\"/>\n",
-    "\n",
-    "<font size=1>(apud) Stuart J. Russell and Peter Norvig. 2003. Artificial Intelligence: A Modern Approach (2 ed.).Pearson Education.</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Inteligência Computacional\n",
-    "\n",
-    "- Um **ramo da Inteligência Artificial**.\n",
-    "- Tem o objetivo de usar técnicas computacionais capazes de aprender, se adaptar e evoluir, para desenvolver softwares que possam ser considerados, em algum nível, inteligentes.\n",
-    "- Técnicas de Inteligência Computacional que lidam com raciocínio:\n",
-    "    \n",
-    "    - **indutivo**: redes neurais artificiais e máquinas de vetores de suporte (SVM).\n",
-    "    - **aproximado**: lógica Fuzzy.\n",
-    "    - **evolutivo**: algoritmos genéticos.\n",
-    "\n",
-    "<font size=1>IEEE Computational Intelligence Society – Montreal Chapter. 2008. Computational intelligence (CI) Definition. (2008). http://ewh.ieee.org/r7/montreal/cis/</font>\n",
-    "\n",
-    "<font size=1>Janos Abonyí, Balazs Feil, and Ajith Abraham. 2005. Computational intelligence in data mining. Informatica 29, 1 (2005), 3–12.</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Raciocínio\n",
-    "\n",
-    "Exercício da razão pelo qual se procura alcançar o entendimento de atos e fatos, formular ideias, elaborar juízos, deduzir algo a partir de uma ou mais premissas - Raciocínio inferencial.\n",
-    "\n",
-    "- Raciocínio dedutivo\n",
-    "- Raciocínio indutivo\n",
-    "- Raciocínio abdutivo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "\n",
-    "### Raciocínio dedutivo (Silogismo) - universal para particular\n",
-    "\n",
-    "Conhece: p(a,b), p(a,d), p(b,c), p(d,e), p(d,g), p(e,f), p(X,Y) E p(Y,Z) --> a(X,Z)\n",
-    "\n",
-    "Conclui: a(a,c), a(a,e), a(a,g), a(d,f)\n",
-    "\n",
-    "---\n",
-    "*Todo homem é mortal.*\n",
-    "\n",
-    "*Aristóteles é um homem.* \n",
-    "\n",
-    "*Aristóteles é mortal.*\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "\n",
-    "### Raciocínio indutivo - particular pro universal\n",
-    "\n",
-    "Conhece: p(a,b), p(a,d), p(d,e), p(d,g), p(e,f)\n",
-    "\n",
-    "Observa: a(a,e), a(d,f)\n",
-    "\n",
-    "Aprende: p(X,Y) E p(Y,Z) --> a(X,Z)\n",
-    "\n",
-    "---\n",
-    "\n",
-    "*O pardal é um pássaro que voa.*\n",
-    "\n",
-    "*A pomba é um pássaro que voa. *\n",
-    "\n",
-    "*O urubu é um pássaro que voa. *\n",
-    "\n",
-    "*Pardal, pomba e urubu são pássaros que vooam. *\n",
-    "\n",
-    "*Todo pássaro voa.*\n",
-    "\n",
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "### Raciocínio abdutivo - particular pro universal para explicar (melhor hipótese)\n",
-    "\n",
-    "Conhece: p(a,b), p(a,d), p(b,c), p(d,e), p(d,g), p(e,f), p(X,Y) E p(Y,Z) --> a(X,Z)\n",
-    "\n",
-    "Observa: a(a,c)\n",
-    "\n",
-    "Explica: p(b,c) ou p(d,c)\n",
-    "\n",
-    "---\n",
-    "\n",
-    "*Os telhados estão molhados.*\n",
-    "\n",
-    "*Logo, choveu.*\n",
-    "\n",
-    "---\n",
-    "\n",
-    "*muito usado em investigações, detetives forenses, diagnósticos médicos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Aprendizado de máquina (*Machine learning*)\n",
-    "- Abordagem de aprendizado para o desenvolvimento de software.\n",
-    "- Não necessariamente um conjunto de técnicas!\n",
-    "- Diferentes tipos de técnicas podem ser aplicadas em Aprendizado de máquina.\n",
-    "- Pode incluir algumas técnicas de Inteligência Computacional.\n",
-    "\n",
-    "<font size=1>Tom M. Mitchell. 1997. Machine Learning (1st ed.). \n",
-    "    McGraw Hill, New York, NY, USA.</font>\n",
-    "\n",
-    "<font size=1>Simon Haykin. 2009. Neural Networks and Learning Machines (3rd ed.). \n",
-    "Pearson Education, NJ, USA. </font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "\n",
-    "## Aprendizado\n",
-    "\n",
-    "Passar a ter conhecimento sobre, passar a possuir habilidade técnica (em).\n",
-    "\n",
-    "Exemplo: aprender um novo idioma, aprender judô.\n",
-    "\n",
-    "\n",
-    "<img src=\"images/superv_vs_notsupervis.jpg\" width = 600 align=\"left\"/>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "### Aprendizado supervisionado\n",
-    "Processo de aproximação de uma função a partir de um conjunto de dados no qual os dados são descrito por atributos (valores de entrada em uma função) e estão relacionados a uma série de rótulos possíveis (valor de saída de uma função). Geralmente, um algoritmo usado para implementar esse processo itera sobre o conjunto de dados, ajustando alguns parâmetros que determinam a função requerida.\n",
-    "\n",
-    "### Aprendizado não supervisionado\n",
-    "Processo de descoberta de relacionamentos existentes entre os dados de um conjunto de dados, descritos por atributos descritivos. Geralmente, um algoritmo usado para implementar esse processo itera sobre o conjunto de dados analisando as similaridades entre os dados."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Teste de Turing\n",
-    "\n",
-    "- No artigo *Computing Machinery and Intelligence*, Turing discutiu as condições para considerar que uma máquina é inteligente.\n",
-    "- Ele argumentou que se a máquina pudesse se passar por um humano mediante um observador inteligente, então certamente ela poderia ser considerada inteligente.\n",
-    "- Este teste satisfaria a maioria das pessoas, mas não todos os filósofos.\n",
-    "- Neste teste, o observador poderia interagir com a máquina e com um humano; o humano tentaria convencer o observador (que era também um humano) de que se tratava realmente de um humano, e a máquina tentaria enganar o observador."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Agentes\n",
-    "- O livro Inteligência Artificial, de Stuart Russel e Peter Norvig é a principal referência para ensino de IA em nível de graduação.\n",
-    "- Nesse livro, foi adotada uma abordagem baseada em **agentes**.\n",
-    "- **Agente** é tudo que pode ser considerado capaz de perceber seu ambiente por meio de sensores e de agir sobre esse ambiente por meio de atuadores.\n",
-    "- **Agentes racionais**: para cada sequência de percepções possível, um agente racional deve selecionar uma ação que se espera que maximize sua medida de desempenho, dada a evidência fornecida pela sequência de percepções e por qualquer conhecimento interno do agente.\n",
-    "\n",
-    "\n",
-    "<font size=1>Russel, S; Norvig, P. Inteligência Artificial. Editora Campus, 2004.</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Introdução a Python\n",
     "\n",
     "Abra o nosso repositório no [Binder](https://mybinder.org/v2/gh/thaisneubauer/FIAP-3ECA-IA/master)"
@@ -927,7 +697,7 @@
     }
    },
    "source": [
-    "![title](images/arrays.png)"
+    "![title](../images/arrays.png)"
    ]
   },
   {
@@ -1265,7 +1035,7 @@
     }
    },
    "source": [
-    "![standardization](images/standardization.jpg)"
+    "![standardization](../images/standardization.jpg)"
    ]
   },
   {
@@ -1335,7 +1105,7 @@
     }
    },
    "source": [
-    "![Eixos de Agregação](images/agregacao_numpy.png)"
+    "![Eixos de Agregação](../images/agregacao_numpy.png)"
    ]
   },
   {
@@ -1357,7 +1127,7 @@
     }
    },
    "source": [
-    "<img src=\"images/pandas.jpeg\" width=400 align=\"center\">"
+    "<img src=\"../images/pandas.jpeg\" width=400 align=\"center\">"
    ]
   },
   {
@@ -1381,7 +1151,7 @@
    "source": [
     "Para essa parte da aula, usaremos os dados do jogo FIFA 19. Esses dados contém informações sobre todos os jogadores presentes no jogo, de diversos clubes ao redor do mundo. Esses dados podem ser [encontrados no Kaggle](https://www.kaggle.com/karangadiya/fifa19). Apesar de lúdico, esses dados têm muitas das características de dados que encontramos normalmente como data scientists: são dados brutos de indivíduos, de onde queremos extrair informações e padrões.\n",
     "\n",
-    "![fifa](images/fifa.jpeg)\n",
+    "![fifa](../images/fifa.jpeg)\n",
     "\n",
     "Nesta aula, usaremos a biblioteca Pandas para extrair informações básicas e responder perguntas sobre nossos dados.\n",
     "\n",
@@ -1404,8 +1174,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-09T22:59:12.315467Z",
-     "start_time": "2020-02-09T22:59:11.753980Z"
+     "end_time": "2020-04-02T20:43:20.188600Z",
+     "start_time": "2020-04-02T20:43:19.775142Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -1413,7 +1183,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"data/data.csv\", index_col=0)"
+    "data = pd.read_csv(\"../data/data.csv\", index_col=0)"
    ]
   },
   {
@@ -2719,6 +2489,13 @@
     "* problema por estritamente um problema de algebra linear (como decomposição de matrizes ou manipulação de vetores) -> escolha Numpy \n",
     "* Performance: numpy é mais simples e sua simplicidade resulta em um código mais otimizado (com diversas partes internas escritas em C ao invés de Python). Se a performance das suas operações no pandas é um problema, troque para Numpy para fazer os cálculos mais pesados.\n",
     "* **Usem SEMPRE a documentação e a comunidade (como Stack Overflow), pois essas são as principais vantagens de utilizar Python e essas bibliotecas mais \"famosas\".**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Esse material foi produzido com base no material de Paulo Roberto de Oliveira Castro."
    ]
   }
  ],
