Fixing 02-Feat Eng

--- a/02-Buscas_EDA_Feature Engineering/notebooks/02-FeatureEngineering.ipynb
+++ b/02-Buscas_EDA_Feature Engineering/notebooks/02-FeatureEngineering.ipynb
@@ -475,6 +475,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Também é necessário preencher os nulos para que esse *encoder* funcione, mas podemos preencher com uma string vazia para que todas as linhas para as quais essa informação não existe receba um mesmo ID. Vamos aplicar o encoder para todas as colunas categóricas e já preencher os nulos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Exercício:</b>\n",
     "Com a documentação do LabelEncoder do Scikit-learn, aplique a função \"fit_transform\" na coluna categórica \"term\".\n",
@@ -491,46 +498,6 @@
     "le = LabelEncoder()\n",
     "\n",
     "#preencha aqui"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Também é necessário preencher os nulos para que esse *encoder* funcione, mas podemos preencher com uma string vazia para que todas as linhas para as quais essa informação não existe receba um mesmo ID. Vamos aplicar o encoder para todas as colunas categóricas e já preencher os nulos."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-23T23:07:38.810511Z",
-     "start_time": "2020-03-23T23:07:35.341130Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "new_df = pd.DataFrame()\n",
-    "for col in cat_cols:\n",
-    "    new_df[col] = df[col].fillna('')\n",
-    "    new_df[col] = None\n",
-    "\n",
-    "select_df = pd.concat([numeric_df, new_df], axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-23T23:07:39.230425Z",
-     "start_time": "2020-03-23T23:07:38.812881Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "select_df[cat_cols].head()"
    ]
   },
   {
@@ -560,24 +527,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-23T23:07:39.378221Z",
-     "start_time": "2020-03-23T23:07:39.233880Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "select_df[cat_cols].max()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos usar o [get_dummies](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.get_dummies.html) do Scikit-learn."
+    "Vamos usar o [get_dummies](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.get_dummies.html) do Pandas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aplicando em uma coluna:\n",
+    "nome_coluna = 'grade'\n",
+    "pd.get_dummies(df[nome_coluna], drop_first=True, prefix = nome_coluna)"
    ]
   },
   {
@@ -591,33 +555,16 @@
    },
    "outputs": [],
    "source": [
-    "new_df = pd.DataFrame()\n",
-    "for col in cat_cols: \n",
-    "    col_dummies = pd.get_dummies(df[col], drop_first=True, prefix = col)\n",
-    "    new_df = pd.concat([new_df, col_dummies], axis = 1)\n",
-    "\n",
-    "select_df = pd.concat([numeric_df, new_df], axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-23T23:07:40.933230Z",
-     "start_time": "2020-03-23T23:07:40.847779Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "select_df.head()"
+    "# Aplicando em várias colunas:\n",
+    "pd.get_dummies(df[cat_cols], drop_first=True)\n",
+    "# por padrão, o prefixo já é o nome da coluna no dataframe"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Outros enconders\n",
+    "### Outros enconders - MATERIAL EXTRA!!!\n",
     "\n",
     "#### Effect Coding\n",
     "- Bem similar ao *dummy*;\n",
@@ -637,6 +584,20 @@
     "- Funções Hash mapeiam uma grande quantidade de valores em uma quantidade finita (e pequena) de valores -> colisões.\n",
     "- [Explicação básica sobre funções hash](https://www.techtudo.com.br/artigos/noticia/2012/07/o-que-e-hash.html)\n",
     "- [Função Scikit Learn](https://scikit-learn.org/0.19/modules/generated/sklearn.feature_extraction.FeatureHasher.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-23T23:07:40.933230Z",
+     "start_time": "2020-03-23T23:07:40.847779Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "select_df.head()"
    ]
   },
   {
@@ -688,7 +649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Material para aprofundamento:\n",
+    "## Material para aprofundamento - MATERIAL EXTRA!!!\n",
     "Para mais detalhes sobre outros métodos de Feature Engineering veja [esses slides](https://www.dropbox.com/s/mebc9i6kxgm516c/feature-engineering-mlmeetup.pdf?dl=0) do HJ van Veen"
    ]
   }
@@ -724,7 +685,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "256px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
